# csp

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  bunfig.toml  desktop-app-spec.md  fly.toml  obsidian-plugin-spec.md  railway.toml  spec.md
.github/workflows/: build.yml  release-obsidian-plugin.yml
crates/csp-core/: Cargo.toml
crates/csp-core/src/: authkeys.rs  config.rs  engine.rs  error.rs  fold.rs  identity.rs  lib.rs  merge.rs  net.rs  object.rs  oid.rs  order.rs  repo.rs  scope.rs  session.rs  state.rs  store.rs  tls.rs  vault.rs  wire.rs
crates/csp-core/tests/: fold_conformance.rs  sync_regression.rs
crates/csp-wasm/: Cargo.toml
crates/csp-wasm/src/: lib.rs
crates/csp-wasm/tests/: interop.rs
crates/ctx/: Cargo.toml
crates/ctx/src/: cli.rs  gitpass.rs  idstore.rs  main.rs  sshagent.rs
demo1/: test
demo1/.context/: authorized_keys  config  state  tls.crt  tls.key
demo1/.context/git/: config
demo1/.context/git/refs/heads/: main
demo2/.context/: authorized_keys  config  state
demo2/.context/git/: config
demo2/.context/git/refs/heads/: main
desktop/: .gitignore  biome.json  bunfig.toml  components.json  index.html  package.json  tsconfig.json  tsconfig.node.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.ts
desktop/e2e/: wdio.conf.js
desktop/e2e/specs/: smoke.e2e.js
desktop/engine/: Cargo.toml
desktop/engine/src/: api.rs  csp.rs  events.rs  lib.rs  stub.rs  types.rs
desktop/engine/tests/: integration.rs
desktop/scripts/: gen-icons.mjs
desktop/src/: App.tsx  index.css  main.tsx  router.tsx  vite-env.d.ts
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: app_config.rs  commands.rs  lib.rs  main.rs  state.rs  tray.rs  window.rs
desktop/src/components/dialogs/: AddLocalFolderDialog.tsx  CloneRemoteDialog.tsx  ConfirmRemoveDialog.tsx  RestoreDialog.tsx  TofuDialog.tsx
desktop/src/components/folders/: AuthorizedPeers.tsx  ConnectBlock.tsx  FolderRow.tsx  SnapshotControls.tsx
desktop/src/components/layout/: PageHeader.tsx  Panel.tsx  Sidebar.tsx  StatusDot.tsx
desktop/src/hooks/: useEngine.tsx
desktop/src/lib/: api.ts  api.types.ts  format.ts  tauri.ts
desktop/src/lib/mock/: fixtures.ts  stub-engine.ts
desktop/src/pages/: FolderDetailPage.tsx  FoldersPage.tsx  SettingsPage.tsx
docs/: astro.config.mjs  package-lock.json  package.json  postcss.config.mjs
docs/scripts/: sync-specs.mjs
docs/src/content/docs/: architecture.md  deploying.md  index.mdx  quick-start.md
docs/src/content/docs/cli/: overview.md
docs/src/content/docs/desktop/: overview.md  spec.md
docs/src/content/docs/obsidian/: overview.md  spec.md
docs/src/content/docs/protocol/: overview.md  spec.md
docs/src/content/docs/rust-core/: overview.md
docs/src/content/docs/sdk/: overview.md
docs/src/styles/: global.css
issues/: 0001-engine-identity-loader-not-ctx-compatible.md  0002-identity-and-config-errors-abort-silently.md  0003-dmg-bundling-requires-finder-gui.md  0004-wss-dial-requires-explicit-port.md  0005-ssh-agent-signing-not-wired-to-engine.md  0005-vault-level-lock-for-concurrent-sync.md  0006-vault-level-lock-for-concurrent-sync.md  0007-per-session-instance-id-for-concurrent-same-nodeid-syncs.md  0008-auth-key-enrollment-and-expiry.md  0009-incremental-commits-for-obsidian-sync.md  0010-move-engine-to-web-worker.md  0011-incremental-persistence-replace-to-bytes.md  0012-deleted-files-resurrect-when-stale-device-reconnects.md  0013-git-repo-coupling-and-joint-history.md  0014-ghost-add-guard-and-explicit-bootstrap-mode.md  README.md
plugins/obsidian/: .gitignore  biome.json  bunfig.toml  esbuild.config.mjs  manifest.json  package.json  tsconfig.json
plugins/obsidian/scripts/: install-vault.mjs
plugins/obsidian/src/: bridge.ts  engine-worker-entry.ts  identity-store.ts  log-buffer.ts  log-modal.ts  main.ts  path-filter.ts  reconcile.ts  settings-tab.ts  settings.ts  status-bar.ts  storage-adapter.ts  sync-controller.ts
plugins/obsidian/test/: setup.ts
plugins/obsidian/test/e2e/: ctx-peer.test.ts  plugin-roundtrip.test.ts
plugins/obsidian/test/mocks/: obsidian-shim.ts  obsidian.ts
plugins/obsidian/test/unit/: bridge-debounce.test.ts  bridge-folder-ops.test.ts  bridge-prune.test.ts  bridge.test.ts  identity-store-io.test.ts  identity-store.test.ts  log-buffer.test.ts  log-modal.test.ts  main.test.ts  path-filter.test.ts  reconcile.test.ts  settings-store-extra.test.ts  settings-tab.test.ts  settings.test.ts  status-bar.test.ts  storage-adapter.test.ts  sync-controller-extra.test.ts  sync-controller.test.ts
scripts/: stamp-version.sh
sdks/typescript/: .gitignore  README.md  biome.json  from-sdk.md  package.json  test-vectors.json  tsconfig.json
sdks/typescript/.context/: authorized_keys  config  state
sdks/typescript/.context/git/: config
sdks/typescript/scripts/: build-wasm.mjs
sdks/typescript/src/: config.ts  identity-file.ts  identity-real.ts  index.ts  real-vault.ts  transport-ws.ts  types.ts  vault.ts  wasm-web.ts  wasm.ts  web-init.ts
sdks/typescript/src/mock/: broker.ts  identity.ts  memory-storage.ts  vault.ts
sdks/typescript/src/worker/: channel.ts  engine-host.ts  protocol.ts  worker-vault.ts
sdks/typescript/test/: config.test.ts  identity-file.test.ts  interop.test.ts  mock-vault.test.ts  worker.test.ts
sdks/typescript/test/e2e/: ctx-parity.test.ts  sync-regression.test.ts
tests/e2e/: Cargo.toml  seed.md
tests/e2e/.context/: authorized_keys  config  state
tests/e2e/.context/git/: config
tests/e2e/.context/git/refs/heads/: main
tests/e2e/src/: lib.rs
tests/e2e/tests/: auth_key.rs  cli_surface.rs  clone_sync.rs  concurrent_merge.rs  git_coherence.rs  key_expiry.rs  move_and_folder_ops.rs  names_and_watch.rs  offline_reconnect.rs  relay_mesh.rs  relay_trust_transitive.rs  relay_two_clones.rs  same_nodeid.rs  scope_filtering.rs  snapshot_restore.rs  tls_default.rs  tofu_bootstrap.rs  two_peer_sync.rs  unauthorized_relay.rs
(+1 files in other folders)
