[workspace]
resolver = "2"
members = [
    "crates/csp-core",
    "crates/ctx",
    "crates/csp-wasm",
    "tests/e2e",
]
default-members = [
    "crates/csp-core",
    "crates/ctx",
    "tests/e2e",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["CSP contributors"]
rust-version = "1.89"

[workspace.dependencies]
sha1 = "0.10"
flate2 = "1"
ed25519-dalek = { version = "2", default-features = false, features = ["std", "rand_core"] }
rand_core = { version = "0.6", features = ["getrandom"] }
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_bytes = "0.11"
rmp-serde = "1.3"
toml = "0.8"
thiserror = "1"
anyhow = "1"
hex = "0.4"
base64 = "0.22"
similar = "2"
regex = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.24", default-features = false, features = ["connect", "handshake"] }
futures-util = "0.3"
notify = "6"
walkdir = "2"
bytes = "1"
sha2 = "0.10"
fs2 = "0.4"
uuid = { version = "1", features = ["v4"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "tls12"] }
rustls-pki-types = "1"
rcgen = { version = "0.13", default-features = false, features = ["pem", "crypto", "ring"] }
tempfile = "3"
ssh-key = { version = "0.6", default-features = false, features = ["std", "ed25519"] }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
