[package]
name = "csp-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Context Sync Protocol engine: deterministic fold, object store, sync state machine"

# The merge/fold engine + on-disk odb are behind `full`, enabled for the
# native/full-node profile and compiled OUT of the wasm/thin profile (§4,
# §7, §16). The reduced surface (object codec, identity/auth, wire framing,
# thin |F|=1 wrapper, frontier math) is always available.
[features]
default = ["full"]
full = []

# Wasm-safe deps only. Anything pulling tokio sockets / OS fs / native crypto
# RNG must be behind the cfg(not(target_arch = "wasm32")) block below so the
# wasm32 build of the reduced surface (§4, §7) stays buildable.
[dependencies]
sha1.workspace = true
flate2.workspace = true
ed25519-dalek.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_bytes.workspace = true
rmp-serde.workspace = true
thiserror.workspace = true
hex.workspace = true
base64.workspace = true
similar.workspace = true
tracing.workspace = true
# NB: `regex` and `toml` are intentionally NOT runtime dependencies. `scope`
# uses a hand-rolled gitignore matcher and `config` a hand-rolled flat-TOML
# codec (regex ~1 MB, toml/toml_edit/winnow ~460 KB in wasm — §16 one engine
# everywhere). Both are dev-dependencies only — the differential-test
# oracles: `scope` is proven byte-for-byte vs the old regex; `config` is
# proven to round-trip and to emit valid TOML the real parser accepts.

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rand_core.workspace = true
rand.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
futures-util.workspace = true
notify.workspace = true
walkdir.workspace = true
bytes.workspace = true
sha2.workspace = true
fs2.workspace = true
rustls.workspace = true
tokio-rustls.workspace = true
rustls-pki-types.workspace = true
rcgen.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }
# Advisory wall-clock only in wasm (§5.1: the logical counter is
# authoritative for order). Native uses std::time.
js-sys = "0.3"

[dev-dependencies]
tokio = { workspace = true }
tempfile.workspace = true
rand.workspace = true
rand_core.workspace = true
# Test-only oracles for the differential tests (scope.rs / config.rs).
regex.workspace = true
toml.workspace = true
