[package]
name = "csp-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "WebAssembly bindings for csp-core (reduced thin-node surface — §4, §7)"

[lib]
crate-type = ["cdylib", "rlib"]

# The SDK is NOT a reimplementation (§16): there is exactly one protocol
# implementation (csp-core). `default-features = false` drops only the
# native-only on-disk odb / tokio sockets — the **full merge/fold engine is
# in the always-on surface** (one engine everywhere; a plugin computes its
# own byte-identical `main`).
[dependencies]
csp-core = { path = "../csp-core", default-features = false }
wasm-bindgen = "0.2"
serde = { workspace = true }
serde_json.workspace = true
hex.workspace = true
# RNG for handshake nonces. Native build (workspace `cargo test`) uses the
# OS source; the wasm target adds the `js` feature below.
getrandom = "0.2"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1"
getrandom = { version = "0.2", features = ["js"] }

# wasm-opt is run separately when binaryen is available; disable the
# automatic download so offline / restricted builds work.
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[package.metadata.wasm-pack.profile.dev]
wasm-opt = false
