[package]
name = "ctx"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "ctx — the Context Sync Protocol CLI"

[[bin]]
name = "ctx"
path = "src/main.rs"

[dependencies]
csp-core = { path = "../csp-core" }
tokio.workspace = true
clap.workspace = true
clap_complete.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
hex.workspace = true
base64.workspace = true
futures-util.workspace = true
notify.workspace = true
uuid.workspace = true
ssh-key.workspace = true

[dev-dependencies]
tempfile.workspace = true
