# The Engine embedding contract (spec §13) + its real implementation over
# the native `csp-core` engine. No `tauri` dependency, so it builds and its
# integration tests run on a plain Linux box (no webkit needed).
[workspace]

[package]
name = "context-desktop-engine"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Real CSP engine (over csp-core) for Context Desktop"

[lib]
name = "context_desktop_engine"
path = "src/lib.rs"

[dependencies]
csp-core = { path = "../../crates/csp-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde", "clock"] }
notify = "6"
hex = "0.4"
uuid = { version = "1", features = ["v4"] }
sha2 = "0.10"
base64 = "0.22"

[dev-dependencies]
tempfile = "3"
